--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "my-website",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
+  "description": "A potfolio and blog website of the author Rachita Bansal.",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
@@ -15,21 +15,21 @@
   "dependencies": {
     "gatsby": "^2.0.76",
     "gatsby-plugin-react-helmet": "^3.0.5",
-    "gatsby-source-filesystem": "^2.0.1-rc.6",
-    "gatsby-transformer-remark": "^2.1.1-rc.5",
+    "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-remark": "^2.8.19",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0",
-    "serve": "^10.1.1"
+    "react-helmet": "^6.1.0",
+    "serve": "^11.3.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/bansalrachita/bansalrachita.github.io"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/bansalrachita/bansalrachita.github.io/issues"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^3.1.0"
   }
 }
