--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master"
   },
   "dependencies": {
+    "acorn": "^6.4.1",
     "gatsby": "^2.0.76",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-source-filesystem": "^2.3.14",
@@ -20,6 +21,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^6.1.0",
+    "react-refresh": "^0.8.3",
     "serve": "^11.3.2"
   },
   "repository": {
