--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-styled-components": "^3.3.6",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-remark": "^2.8.19",
+    "prop-types": "^15.7.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^6.1.0",
